--- a/tutorials/spde/spde-tutorial.tex
+++ b/tutorials/spde/spde-tutorial.tex
@@ -25,7 +25,7 @@
 \title{\textbf{The R-INLA tutorial: SPDE models}\\
 Warning: work in progress...\\
 Suggestions are welcome to \texttt{elias@r-inla.org}}
-\author{Elias T. Krainski}
+\author{Elias T. Krainski and Finn Lindgren}
 
 \begin{document}
 \maketitle
