--- a/tutorials/spde/updates.tex
+++ b/tutorials/spde/updates.tex
@@ -1,5 +1,5 @@
 \begin{verbatim}
-2013 october 02:
+2013 October 02:
  * mesh improvements:
   . use the new Finn's functions: inla.mesh.2d and inla.noncovexhull 
   . non-convex, SpatialPolygons 
@@ -10,6 +10,9 @@
   . preferential sampling 
   . spatio temporal example 
   . data cloning
+2013 October 08: 
+ * Finn's suggestions to make clear the stack with two likelihoods examples and on non-stationary
+
 to do: 
  ** English improvement ** 
 
