--- a/tutorials/spde/spde-tutorial-introduction.tex
+++ b/tutorials/spde/spde-tutorial-introduction.tex
@@ -1,10 +1,11 @@
 
 \chapter{Introduction} 
 
-If we have data measured on some locations, 
-by locations we mean some system of coordinate 
-reference where are each data from, so we 
-have a point refereed data set. 
+If we have data measured at some locations, 
+so we have a point refereed data set. 
+By locations we mean some coordinates reference 
+system where are each data from, for example, 
+the longitude and latitude coordiantes.
 The point refereed data is very common in many 
 areas of science. These type of data appear on 
 mining, climate modeling, ecology, agriculture 
@@ -12,8 +13,6 @@ and other areas.
 If we want do model that data incorporating 
 the reference about where are each data from, 
 we want do use a model to point refereed data. 
-
-\section{The spatial dependence}
 
 It is possible that we build a regression model 
 considering each coordinates as covariate. 
@@ -57,10 +56,11 @@ that study these models, the geostatistics.
 See \cite{cressie:1993} for a good introduction on 
 the spatial statistics. 
 
-\section{The Gaussian field}
+\section{The Gaussian random field}
 
-To fix the notation, let $s$ any location on the study 
-area and $X(s)$ is the random effect at this location. 
+To introduce some notation, let $s$ any 
+location on the study area and $X(s)$ is 
+the random effect at this location. 
 We have $X(s)$ a stochastic process, with $s\in \bD$, 
 were $\bD$ is the domain area of the locations 
 and $\bD\in \Re^d$. 
@@ -185,8 +185,8 @@ effect distribution, we need to make
 computations of the multivariate Gaussian density. 
 So, we have, in the log scale, the expression 
 \begin{equation}
--\frac{n}{2}log(2\pi)-|\Sigma| -\frac{1}{2}
-(x(s) - \mu_x)^{T}\Sigma^{-1}(x(s)-\mu_x) 
+-\frac{1}{2}\left(nlog(2\pi) + log(|\Sigma|) 
++ [x(s) - \mu_x]^{T}\Sigma^{-1}[x(s)-\mu_x]\right)
 \end{equation}
 where $\Sigma$ is a dense $n\times n$. 
 To compute this, we need a factorization of this matrix. 
@@ -222,128 +222,3 @@ to do than we use the GF, because to work with two dimensional
 GMRF models, we have cost of $O(n^{3/2})$ 
 on the computations with its precision matrix. 
 So, it is more easy to make analysis with big 'n'. 
- 
-\section{The SPDE approach} 
-
-In the literature there is some ideas to 
-fit GF by an approximation of the GF to any GMRF. 
-The very good alternative found is the use of 
-the stochastic partial differential equation 
-approach (SPDE), \cite{lindgrenRL:2011}. 
-This approach got a explicit link between GF to GMRF. 
-
-The SPDE approach is based on two main results. 
-The first one extends the result obtained by \cite{besag:1981}. 
-This result is to approximate a GF with generalized 
-covariance function, obtained when $\nu \rightarrow 0$ 
-in the Mat\'ern correlation function. 
-This approximation, considering a regular two-dimensional 
-lattice with number of sites tending to infinite, 
-is that the full conditional have 
-\begin{equation}
-E(x_{ij}|x_{-ij}) = \frac{1}{a}(x_{i-1,j}+x_{i+1,j}+x_{i,j-1}+x_{i,j+1})
-\end{equation}
-and $Var(x_{ij}|x_{-ij}) = 1/a$ for $|a|>4$. 
-In the representation using precision matrix, 
-we have, for one single site, just the upper right 
-quadrant and with $a$ as the central element, that 
-\begin{equation}\label{eq:q0}
-\begin{matrix}
--1  & \\
-a & -1
-\end{matrix}
-\end{equation}
-
-Considering a GF $x(\bbu)$ with the Mat\'ern 
-covariance is a solution to the linear fractional SPDE 
-\begin{equation}
-(\kappa^2 - \Delta )^{\alpha/2}x(\bbu) = \bW (\bbu ),\;\;\;
-\bbu \in \Re^d,\;\;\;\alpha=\nu+d/2,\;\;\kappa>0,\;\;\nu>0,
-\end{equation}
-\cite{lindgrenRL:2011} show that for $\nu=1$ and $\nu=2$ 
-the GMRF representations are convolutions of (\ref{eq:q0}). 
-So, for $\nu=1$, in that representation we have:
-\begin{equation}
-\begin{matrix}
-1  & & \\
--2a & 2 & \\
-4+a^2 & -2a & 1
-\end{matrix}
-\end{equation}\label{eq:q1}
-and, for $\nu=2$:
-\begin{equation}
-\begin{matrix}
--1  & & &\\
-3a & -3 & &\\
--3(a^2+3) & 6a & 3 & \\
-a(a^2+12) & -3(a^2+3) & 3a & -1
-\end{matrix}
-\end{equation}\label{eq:q2}
-This is an intuitive result, because if we have 
-larger $\nu$ on the Mat\'ern correlation function of the GF, 
-we need more non zero neighbours sites in the GMRF representation. 
-Remember that it is the smoothness parameter, so if the 
-process is more smooth, we need a more larger neighbourhood 
-on the GMRF representation. 
-
-If the spatial locations are on a irregular grid, 
-it is necessary the use of the second result on
-\cite{lindgrenRL:2011}. 
-To extend the first result, a suggestion is the use of 
-the finite element method (FEM) for a interpolation of 
-the locations of observations to the nearest grid point. 
-To do it, suppose that the $\Re^2$ is subdivided into 
-a set of non-intersecting triangles, where any two
-triangles meet in at most a common edge or corner. 
-The three corners of a triangle are named \textit{vertices}.
-The suggestion is to start with the location of the 
-observed points and add some triangles (heuristically) 
-with restriction to maximize the allowed edge length 
-and minimize the allowed angles. 
-The the approximation is 
-\[x(\bbu) = \sum_{k=1}^{n}\psi_k(\bbu)w_k\]
-for some chosen basis functions {$\psi_k$}, 
-Gaussian distributed weights $w_k$ and $n$ the 
-number of vertices on the triangulation.
-If the functions $\psi_k$ are piecewise linear in each 
-triangle, $\psi_k$ is 1 at vertices $k$ and 0 at all 
-other vertices. 
-
-The second result is obtained using the $n\times n$ matrices 
-$\bC$, $\bG$ and $\bK$ with entries 
-\begin{equation}
-C_{i,j} = \langle \psi_i, \psi_j\rangle, \;\;\;\;\;
-G_{i,j} = \langle \nabla \psi_i, \nabla \psi_j \rangle, \;\;\;\;\;
-(\bK_{\kappa^2})_{i,j} = \kappa^2 C_{i,j} + G_{i,j}
-\end{equation}
-to get the precision matrix $\bQ_{\alpha,\kappa}$ 
-as a function of $\kappa^2$ and $\alpha$: 
-\begin{equation}\label{eq:Qalpha}\begin{array}{c}
-\bQ_{1,\kappa^2} = \bK_{\kappa^2}, \\
-\bQ_{2,\kappa^2} = \bK_{\kappa^2}\bC^{-1}\bK_{\kappa^2}, \\
-\bQ_{\alpha,\kappa^2} = \bK_{\kappa^2}\bC^{-1}Q_{\alpha-2,\kappa^2}\bC^{-1}\bK_{\kappa^2}, 
-\;\;\;\mbox{for} \;\;\alpha = 3,4,...\;.
-\end{array}\end{equation}
-Here we have too the notion that if $\nu$ increases, 
-we need a more dense precision matrix. 
-
-The $\bQ$ precision matrix is generalized for a fractional values 
-of $\alpha$ (or $\nu$) using a Taylor approximation, 
-see the author's discussion response in \cite{lindgrenRL:2011}. 
-From this approximation, we have the polynomial of 
-order $p=\lceil \alpha \rceil$ for the precision matrix 
-\begin{equation}\label{eq:Qfrac}
-\bQ = \sum_{i=0}^p b_i \bC(\bC^{-1}\bG)^i.
-\end{equation}
-For $\alpha=1$ and $\alpha=2$ we have the (\ref{eq:Qalpha}). 
-Because, for $\alpha=1$, we have $b_0=\kappa^2$ and $b_1=1$, 
-and for $\alpha=2$, we have $b_0=\kappa^4$, 
-$b_1=\alpha\kappa^4$ and $b_2=1$. 
-For fractional $\alpha=1/2$ 
-$b_0=3\kappa/4$ and $b_1=\kappa^{-1}3/8$. 
-And, for $\alpha=3/2$, ($\nu=0.5$, the exponential case), 
-$b_0=15\kappa^3/16$, $b_1=15\kappa/8$, 
-$b_2=15\kappa^{-1}/128$. 
-Using these results combined with recursive construction, 
-for $\alpha>2$, we have GMRF approximations for all positive 
-integers and half-integers. 
