--- a/r-inla.org/doc/latent/bym.tex
+++ b/r-inla.org/doc/latent/bym.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper,11pt]{article}
 \usepackage[scale={0.8,0.9},centering,includeheadfoot]{geometry}
 \usepackage{amstext}
+\usepackage{amsmath}
 \usepackage{listings}
 \begin{document}
 
@@ -68,7 +69,10 @@ Volume I.
 
 \subsection*{Notes}
 
-None
+The term $\frac{1}{2}\log(|R|^{*})$ of the normalisation constant is
+not computed, hence you need to add this part to the log marginal
+likelihood estimate, if you need it. Here $R$ is the precision matrix
+with a unit precision parameter for the Besag part of the model.
 
 \end{document}
 
