--- a/r-inla.org/doc/latent/rw1.tex
+++ b/r-inla.org/doc/latent/rw1.tex
@@ -82,9 +82,9 @@ result1=inla(formula1,data=data,family="gaussian")
 \item The RW1 is intrinsic with rank deficiency 1.
 \item The RW1 model for irregular locations are supported although not
     described here.
-\item The $\frac{n-r}{2}\log(|R|^{*})$-part (with $r=1$) of the
-    normalisation constant is not computed, hence you need to add this
-    part to the log marginal likelihood estimate, if you need it.
+\item The term $\frac{1}{2}\log(|R|^{*})$ of the normalisation
+    constant is not computed, hence you need to add this part to the
+    log marginal likelihood estimate, if you need it.
 \end{itemize}
 \end{document}
 
