--- a/r-inla.org/doc/latent/rw2.tex
+++ b/r-inla.org/doc/latent/rw2.tex
@@ -73,9 +73,9 @@ result=inla(formula,data=data,family="gaussian")
 \item The RW2 is a intrinsic with rank deficiency 2.
 \item The RW2 model for irregular locations are supported although not
     described here.
-\item The $\frac{n-r}{2}\log(|R|^{*})$-part (with $r=2$) of the
-    normalisation constant is not computed, hence you need to add this
-    part to the log marginal likelihood estimate, if you need it.
+\item The term $\frac{1}{2}\log(|R|^{*})$ of the normalisation
+    constant is not computed, hence you need to add this part to the
+    log marginal likelihood estimate, if you need it.
 \end{itemize}
 \end{document}
 
