Added model besagproper2 upon request.

--- a/r-inla.org/doc/hyper/latent/besagproper.tex
+++ b/r-inla.org/doc/hyper/latent/besagproper.tex
@@ -34,5 +34,6 @@
 	\item[n.div.by] 
 	\item[n.required] TRUE
 	\item[set.default.values] TRUE
+	\item[status] experimental
 	\item[pdf] besagproper
 \end{description}
