--- a/r-inla.org/doc/hyper/latent/besagproper2.tex
+++ b/r-inla.org/doc/hyper/latent/besagproper2.tex
@@ -8,32 +8,32 @@
 	 	 	\item[name] log precision
 	 	 	\item[short.name] prec
 	 	 	\item[prior] loggamma
-	 	 	\item[param] 1 0.1
-	 	 	\item[initial] 2.30258509299405
+	 	 	\item[param] 1 5e-04
+	 	 	\item[initial] 2
 	 	 	\item[fixed] FALSE
 	 	 	\item[to.theta] \verb|function(x) log(x)|
 	 	 	\item[from.theta] \verb|function(x) exp(x)|
 	 	 \end{description}
 	 	\item[theta2]\ 
 	 	 \begin{description}
-	 	 	\item[name] logit rho
-	 	 	\item[short.name] rho
+	 	 	\item[name] logit lambda
+	 	 	\item[short.name] lambda
 	 	 	\item[prior] gaussian
 	 	 	\item[param] 0 0.45
-	 	 	\item[initial] -3
+	 	 	\item[initial] 3
 	 	 	\item[fixed] FALSE
 	 	 	\item[to.theta] \verb|function(x) log(x/(1-x))|
 	 	 	\item[from.theta] \verb|function(x) exp(x)/(1+exp(x))|
 	 	 \end{description}
 	 \end{description}
-	\item[constr] TRUE
+	\item[constr] FALSE
 	\item[nrow.ncol] FALSE
-	\item[augmented] TRUE
-	\item[aug.factor] 2
-	\item[aug.constr] 2
+	\item[augmented] FALSE
+	\item[aug.factor] 1
+	\item[aug.constr] 
 	\item[n.div.by] 
 	\item[n.required] TRUE
 	\item[set.default.values] TRUE
 	\item[status] experimental
-	\item[pdf] bym2
+	\item[pdf] besagproper2
 \end{description}
