--- a/tutorials/spde/inla-spde-howto/inla-spde-howto.Rnw
+++ b/tutorials/spde/inla-spde-howto/inla-spde-howto.Rnw
@@ -13,7 +13,7 @@
 
 \vspace{-1cm}
 \begin{center}\begin{minipage}[c]{0.9\textwidth}\centering
-This work shows quickly how to do a 
+This article quickly ilustrates how to do a 
 geostatistical fully Bayesian analysis
 through the \textbf{S}tochastic \textbf{P}artial 
 \textbf{D}iferential \textbf{E}quation 
@@ -53,7 +53,7 @@ R <- s2x*exp(-k*as.matrix(dist(coo)))
 x <- drop(rnorm(n)%*%chol(R)) 
 @ 
 
-Add a covariate effect and a noise 
+A \textbf{covariate} effect and a noise can be added
 <<noise,tidy=FALSE>>=
 u <- runif(n);  beta <- 1:2;  s2e <- 0.3 
 lin.pred <- beta[1] + beta[2]*u + x 
@@ -63,12 +63,12 @@ y <- lin.pred + rnorm(n, 0, sqrt(s2e))
 \section{Model fitting: steps} 
 
 1. \textbf{Mesh:} 
-  a triangulation ($m$ nodes) to 
-  random field (RF) discretization. 
-  It need triangles within and outer domain. 
-  Is good to have they aproximately isosceles and 
-  the inner ones with edge length less than 
-  the process range.
+a triangulation (with $m$ nodes) to 
+do the random field (RF) discretization. 
+It need triangles within and outer domain. 
+Is good to have they aproximately isosceles and 
+the inner ones with edge length less than 
+the process range.
 <<fmesh, tidy=FALSE, pars=list(mar=c(0,0,0.7,0)), out.width='0.35\\textwidth', fig.align='center'>>=
 mesh <- inla.mesh.2d(
     coo, ## provide locations or domain
@@ -78,9 +78,10 @@ plot(mesh, asp=1);  points(coo, col='red')
 @ 
 
 2. \textbf{Define the $n\times m$ projector matrix} to project 
-  the process at the mesh nodes to locations 
+ the process at the mesh nodes to locations 
 <<projector, tidy=FALSE>>=
-A <- inla.spde.make.A(mesh=mesh, loc=coo) 
+dim(A <- inla.spde.make.A(
+    mesh=mesh, loc=coo)) 
 @ 
 
 3. \textbf{Build the SPDE model} on the mesh.
@@ -91,15 +92,21 @@ spde <- inla.spde2.matern(
     mesh=mesh, alpha=1.5) 
 @ 
 
-4. \textbf{Create a stack data} for the estimation 
+4. \textbf{Create a stack data} for the estimation. 
+This is a way to allow models with complex 
+linear predictors. In our case, we have a SPDE 
+model defined on $m$ nodes. It must be combined 
+with the covariate (and the intercept) 
+effect at $n$ locations. 
+We do it using different projector matrices. 
+
 <<stack-estimation,tidy=FALSE>>=
 stk.e <- inla.stack(tag='est', ## tag
     data=list(y=y),  ## response
     A=list(A, 1), ## two projector matrix
     effects=list(## two elements:
         s=1:spde$n.spde, ## RF index
-        data.frame(b0=1, ## intercept
-                   u=u))) ### covariate
+        data.frame(b0=1, u=u)))
 @ 
 
 5. \textbf{Fit} the posterior marginal distributions
@@ -124,7 +131,7 @@ there is no spatial effect on the data.
 
 \section{Posterior marginal distributions - PMDs} 
 
-Summary of PMDs for the regression coefficients 
+Summary of the regression coefficients PMDs
 <<fixed-summary>>=
 round(res$summary.fixed, 4) 
 @ 
@@ -132,28 +139,29 @@ round(res$summary.fixed, 4)
 \begin{multicols}{2} 
 \textbf{\textsf{INLA}} works with precisions. 
 We have to transform the precision PMD to have 
-variance PMD 
-<<posterior-s2e>>=
-post.s2e <- inla.tmarginal(# tranf. func.
-    function(x) 1/x, ## inversion
-    res$marginals.hyperpar[[1]])
-@ 
-
-PMD of noise variance is visualized (at right) by
+the variance PMD. It can be done and visialized by
 <<fvar, tidy=FALSE, pars=list(mar=c(2.5,2.5,0.1,0.1), mgp=c(1.7,0.5,0)), fig.width=3.5, fig.height=3.5, out.width='0.35\\textwidth', fig.align='center', fig.pos='h'>>=
+post.s2e <- 
+  inla.tmarginal(# tranformation function
+  function(x) 1/x, ## inverse transf. 
+  res$marginals.hyperpar$
+'Precision for the Gaussian observations')
 plot(post.s2e, type='l', ylab='Density', 
      xlab=expression(sigma[y]^2))
-abline(v=s2e, col=2)
+abline(v=s2e, col=2) ## add true value
 @ 
 \end{multicols} 
 \hrulefill
 \begin{multicols}{2} 
-\textbf{\textsf{INLA}} also works with a 
-reparametrization of the RF parameters. 
-That is the log of $\kappa$ and the 
-log of the local variance, $\tau$ such that 
-$\sigma_x^2=1/(2\pi\kappa\phi)$. 
-The PMDs on the user scale can be computed 
+The SPDE approach uses a 
+local variance, $\tau^2$, 
+such that $\sigma_x^2=1/(2\pi\kappa^2\tau^2)$. 
+On \textbf{\textsf{INLA}} we work $log(\tau^2)$
+and $log(\kappa)$. So, especially for 
+$\sigma_x^2$, we have to do 
+an additional computation. 
+The PMDs for all RF parameters on 
+user scale are computed by
 <<rf>>=
 rf <- inla.spde.result(
     inla=res, ## the inla() output
@@ -164,16 +172,16 @@ rf <- inla.spde.result(
 \end{multicols} 
 
 It can be visualized by 
-<<rfpars, pars=list(mfrow=c(1,3), mar=c(2.5,2.5,0.3,0.3), mgp=c(1.5,0.5,0)), fig.width=9, fig.height=3, out.width='0.99\\textwidth', out.height='0.33\\textwidth', fig.align='center', fig.pos='h', fig.keep='last'>>=
-plot(rf$marginals.variance[[1]], type='l', 
-     xlab=expression(sigma[x]^2), ylab='Density')
-abline(v=s2x, col=2) ## add true value
+<<rfpars, pars=list(mfrow=c(1,3), mar=c(2.5,2.5,0.3,0.3), mgp=c(1.5,0.5,0)), fig.width=7.5, fig.height=2.5, out.width='0.99\\textwidth', out.height='0.33\\textwidth', fig.align='center', fig.pos='h', fig.keep='last'>>=
+plot(rf$marginals.var[[1]], ty='l', 
+     xlab=expression(sigma[x]^2), yla='Density')
+abline(v=s2x, col=2) ## add the true value
 plot(rf$marginals.kap[[1]], type='l',
      xlab=expression(kappa), ylab='Density')
-abline(v=k, col=2) ## add true value
+abline(v=k, col=2) ## add the true value
 plot(rf$marginals.range[[1]], type='l', 
      xlab='range nominal', ylab='Density')
-abline(v=sqrt(8)/k, col=2) ## add true value
+abline(v=sqrt(8)/k, col=2) ## add the true value
 @
 
 \section{Projection on a grid}
@@ -207,7 +215,7 @@ dim(Ap <- inla.spde.make.A(mesh=mesh, loc=tcoo))
 u.pred <- c(0.5, 0.5, 0.5)
 @ 
 
-To make the fully Bayesian analysis, 
+To do a fully Bayesian analysis, 
 we include the target locations on the 
 estimation process by assigning NA 
 for the response at these locations. 
