some good sugestions by G-AF and HWK on inla-spde-howto

--- a/tutorials/spde/inla-spde-howto/inla-spde-howto.Rnw
+++ b/tutorials/spde/inla-spde-howto/inla-spde-howto.Rnw
@@ -14,7 +14,7 @@
 
 \vspace{-1cm}
 \begin{center}\begin{minipage}[c]{0.9\textwidth}\centering
-This article quickly ilustrates how to do a 
+This document ilustrates how to do a 
 geostatistical fully Bayesian analysis
 through the \textbf{S}tochastic \textbf{P}artial 
 \textbf{D}iferential \textbf{E}quation 
