--- a/tutorials/spde/inla-spde-howto/inla-spde-howto.Rnw
+++ b/tutorials/spde/inla-spde-howto/inla-spde-howto.Rnw
@@ -42,6 +42,7 @@ inla.setOption(inla.call='remote')
 \textbf{Locations} and the Random 
 Field (RF) \textbf{covariance} matrix, 
 exponential correlation function 
+
 <<locations,tidy=FALSE>>=
 n = 200; coo = matrix(runif(2*n), n) 
 k <- 10;   s2rf <- 0.7 ## RF params.
@@ -55,6 +56,7 @@ s <- drop(rnorm(n)%*%chol(R))
 @ 
 
 A \textbf{covariate} effect and a noise can be added
+
 <<noise,tidy=FALSE>>=
 x <- runif(n);  beta <- 1:2;  s2e <- 0.3
 lin.pred <- beta[1] + beta[2]*x + s 
@@ -64,13 +66,12 @@ y <- lin.pred + rnorm(n, 0, sqrt(s2e))
 \section{Model fitting: steps} 
 
 1. \textbf{Mesh:} 
-a triangulation (with $m$ nodes) to 
-do the random field (RF) discretization. 
-It need triangles within and outer domain. 
-Is good to have they aproximately isosceles and 
-the inner ones with edge length less than 
-the process range.
-<<fmesh, tidy=FALSE, pars=list(mar=c(0,0,0.7,0)), out.width='0.35\\textwidth', fig.align='center'>>=
+a triangulation to discretize the 
+random field (RF) at $m$ nodes. 
+The additional triangles outer domain 
+is to avoid boundary effects. 
+
+<<fmesh, tidy=FALSE, pars=list(mar=c(0,0,0.7,0)), out.width='0.45\\textwidth', fig.align='center'>>= 
 mesh <- inla.mesh.2d(
     coo, ## provide locations or domain
     max.edge=c(1/k, 2/k), ## mandatory 
@@ -78,11 +79,21 @@ mesh <- inla.mesh.2d(
 plot(mesh, asp=1);  points(coo, col='red')
 @ 
 
+A little warning about the triangle on the mesh. 
+Is good to have they aproximately isosceles. 
+Also, we have to look at the range of the process 
+and compare it with the edges lengths 
+of the inner mesh triangles. 
+We need the lengths of the edges to be 
+less than the range of the process. 
+If it is too small, there might 
+not be any spatial effect. 
+
 2. \textbf{Define the $n\times m$ projector matrix} to project 
  the process at the mesh nodes to locations 
 <<projector, tidy=FALSE>>=
 dim(A <- inla.spde.make.A(
-    mesh=mesh, loc=coo)) 
+    mesh=mesh, loc=coo)) ## 'n' by 'm'
 @ 
 
 3. \textbf{Build the SPDE model} on the mesh.
@@ -112,6 +123,7 @@ stk.e <- inla.stack(tag='est', ## tag
 
 5. \textbf{Fit} the posterior marginal distributions
   for all model parameters 
+
 <<fitting>>= 
 formula <- y ~ 0 + b0 + x + ## fixed part
     f(s, model=spde) ## RF term
@@ -121,28 +133,24 @@ res <- inla(formula,
         inla.stack.A(stk.e)))# projector
 @ 
 
-A little warning about mesh. 
-We have to look at the range of the process 
-and compare it with the edges lengths 
-of the inner mesh triangles. 
-We need the lengths of the edges to be 
-less than the range of the process. 
-If it is too small, there might 
-not be any spatial effect. 
-
 \end{multicols} 
 
 \section{Posterior marginal distributions - PMDs} 
 
 Summary of the regression coefficients PMDs
+
 <<fixed-summary>>=
 round(res$summary.fixed, 4) 
 @ 
+
 \hrulefill
+
 \begin{multicols}{2} 
+
 \textbf{\textsf{INLA}} works with precisions. 
 We have to transform the precision PMD to have 
 the variance PMD. It can be done and visialized by
+
 <<fvar, tidy=FALSE, pars=list(mar=c(2.5,2.5,0.1,0.1), mgp=c(1.7,0.5,0)), fig.width=3.5, fig.height=3.5, out.width='0.35\\textwidth', fig.align='center', fig.pos='h'>>=
 post.s2e <- 
   inla.tmarginal(# tranformation function
@@ -153,11 +161,14 @@ plot(post.s2e, type='l', ylab='Density',
      xlab=expression(sigma[e]^2))
 abline(v=s2e, col=2) ## add true value
 @ 
+
 \end{multicols} 
+
 \hrulefill
+
 \begin{multicols}{2} 
-The SPDE approach uses a 
-local variance, $\tau^2$, 
+
+The SPDE approach uses a local variance, $\tau^2$, 
 such that $\sigma_{rf}^2=1/(2\pi\kappa^2\tau^2)$. 
 On \textbf{\textsf{INLA}} we work $\log(\tau^2)$
 and $\log(\kappa)$. So, especially for 
@@ -165,6 +176,7 @@ $\sigma_{rf}^2$, we have to do
 an additional computation. 
 The PMDs for all RF parameters on 
 user scale are computed by
+
 <<rf>>=
 rf <- inla.spde.result(
     inla=res, ## the inla() output
@@ -172,9 +184,11 @@ rf <- inla.spde.result(
     spde=spde, ## SPDE model object
     do.transf=TRUE) ## to user scale
 @ 
+
 \end{multicols} 
 
 It can be visualized by 
+
 <<rfpars, pars=list(mfrow=c(1,3), mar=c(3,3,0.3,0.3), mgp=c(2,0.5,0)), fig.width=7.5, fig.height=2.5, out.width='0.99\\textwidth', out.height='0.33\\textwidth', fig.align='center', fig.pos='h', fig.keep='last'>>=
 plot(rf$marginals.var[[1]], ty='l', 
      xlab=expression(sigma[rf]^2), yla='Density')
@@ -194,6 +208,7 @@ The simplest way to have it is by projection.
 We just have to define the projector matrix 
 and project, for example, the posterior 
 mean and posterior standard deviation on the grid. 
+
 <<project-grid>>=
 gproj <- inla.mesh.projector(mesh,  xlim=0:1, ylim=0:1, dims=c(300,300))
 g.mean <- inla.mesh.project(gproj, res$summary.random$s$mean)
@@ -201,6 +216,7 @@ g.sd <- inla.mesh.project(gproj, res$summary.random$s$sd)
 @ 
 
 We can visualize it by 
+
 <<fgrid, tidy=FALSE, fig.width=9.7, fig.height=4.5, out.width='0.97\\textwidth', out.height='0.45\\textwidth', fig.pos='h'>>=
 library(lattice);     library(gridExtra) 
 trellis.par.set(regions=list(col=terrain.colors(16))) 
@@ -212,6 +228,7 @@ grid.arrange(levelplot(g.mean, scales=list(draw=F), xlab='', ylab='', main='mean
 
 Define target locations, the corresponding projector 
 matrix and covariate values at target locations 
+
 <<target-loc>>=
 tcoo <- rbind(c(0.3,0.3), c(0.5,0.5), c(0.7,0.7))
 dim(Ap <- inla.spde.make.A(mesh=mesh, loc=tcoo)) 
@@ -223,12 +240,14 @@ we include the target locations on the
 estimation process by assigning NA 
 for the response at these locations. 
 Defining the prediction stack 
+
 <<prediction-stack>>=
 stk.pred <- inla.stack(tag='pred', A=list(Ap, 1), data=list(y=NA), ## response as NA
                        effects=list(s=1:spde$n.spde, data.frame(x=x0, b0=1)))
 @ 
 
 Fit the model again with the full stack 
+
 <<refit-predict>>=
 stk.full <- inla.stack(stk.e, stk.pred) 
 p.res <- inla(formula, data=inla.stack.data(stk.full), ## full stack
@@ -238,6 +257,7 @@ p.res <- inla(formula, data=inla.stack.data(stk.full), ## full stack
 
 Get the prediction data index and 
 collect the PMD to work with 
+
 <<ypost>>=
 pred.ind <- inla.stack.index(stk.full, tag='pred')$data
 ypost <- p.res$marginals.fitted.values[pred.ind]
@@ -245,6 +265,7 @@ ypost <- p.res$marginals.fitted.values[pred.ind]
 
 Visualize PMD for the linear predictor at target 
 locations with commands bellow
+
 <<ppred, tidy=FALSE, fig.width=9.9, fig.height=3.5, out.width='0.99\\textwidth', out.height='0.35\\textwidth', fig.pos='h', fig.keep='last'>>=
 names(ypost) <- paste('y', seq_along(ypost), sep='_');     library(plyr) 
 xyplot(y~x | .id, ldply(ypost), panel='llines', xlab='y', ylab='Density')
@@ -269,6 +290,7 @@ inla.pmarginal(inla.qmarginal(
 
 \bibliographystyle{apalike}
 \bibliography{../spde-tutorial}
+
 \end{multicols} 
 
-\end{document}
+\end{document} 
