Replaced calls to multicore-library with the newer parallel one.

--- a/r-inla.org/doc/latent/rgeneric.tex
+++ b/r-inla.org/doc/latent/rgeneric.tex
@@ -21,7 +21,7 @@ the computations are done in a standalone C-program and not within
 \texttt{R}, so therefore this option is \emph{only} available for
 Linux and MacOSX, and \emph{not} available for Windows. Also you need
 to run it on a dual-core (or more cores) computer and have installed
-the \texttt{multicore}-library. It will run more slowly for the
+the \texttt{parallel}-library. It will run more slowly for the
 following reasons:
 \begin{enumerate}
 \item The C-program doing the calculations has to communicate with
